[package]
name = "vizier-adql"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"
description = "Simple Rust client for querying astronomical data from VizieR using ADQL"
repository = "https://github.com/mclrc/vizier-rs"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
