[package]
name = "vizier-adql"
version = "0.1.3"
edition = "2021"
license = "GPL-2.0"
description = "Simple Rust client for querying astronomical data from VizieR using ADQL"
repository = "https://github.com/mclrc/vizier-rs"

[dependencies]
maybe-async = "0.2.10"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.59"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[features]
is_sync = ["maybe-async/is_sync", "reqwest/blocking"]
